Fix build settings

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,18 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:watchy]
+[env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
 lib_deps =
-    Watchy
-lib_ldf_mode = deep+
+    sqfmi/Watchy
+    Arduino-libraries/Arduino_JSON@0.1.0
+    https://github.com/elpaso/Rtc_Pcf8563.git
+    https://github.com/tzapu/WiFiManager.git#v2.0.11-beta
+
 board_build.partitions = min_spiffs.csv
 upload_speed = 921600
 build_src_flags = -Wall -Wextra
+lib_ldf_mode = deep+
