Best new fit, all new waetewr icons, new compact font

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,9 @@ lib_deps =
     https://github.com/elpaso/Rtc_Pcf8563.git
     https://github.com/tzapu/WiFiManager.git#v2.0.11-beta
 
+; board_build.partitions = huge_app.csv
 board_build.partitions = min_spiffs.csv
 upload_speed = 921600
 build_src_flags = -Wall -Wextra
 lib_ldf_mode = deep+
+build_flags = -Os
