--- a/platformio.ini
+++ b/platformio.ini
@@ -8,20 +8,23 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
-platform = espressif32
-board = esp32dev
+[env:watchy]
+platform = espressif32@6.6.0
+board = watchy
 framework = arduino
 monitor_speed = 115200
+
 lib_deps =
     sqfmi/Watchy
-    Arduino-libraries/Arduino_JSON@0.1.0
-    https://github.com/elpaso/Rtc_Pcf8563.git
-    https://github.com/tzapu/WiFiManager.git#v2.0.11-beta
+    https://github.com/jasmaa/ESP32-ANCS-Notifications.git
 
-; board_build.partitions = huge_app.csv
-board_build.partitions = min_spiffs.csv
+platform_packages =
+    framework-arduinoespressif32 @ 3.20017.0
+
+board_build.partitions = huge_app.csv
 upload_speed = 921600
 build_src_flags = -Wall -Wextra
 lib_ldf_mode = deep+
-build_flags = -Os
+build_flags =
+    -DARDUINO_ARCH_ESP32
+    -Iinclude
