--- a/platformio.ini
+++ b/platformio.ini
@@ -9,22 +9,22 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:watchy]
-platform = espressif32@6.6.0
-board = watchy
+platform = espressif32@5.3.0
+board = esp32dev
 framework = arduino
 monitor_speed = 115200
 
 lib_deps =
-    sqfmi/Watchy
-    https://github.com/jasmaa/ESP32-ANCS-Notifications.git
-
-platform_packages =
-    framework-arduinoespressif32 @ 3.20017.0
+    https://github.com/sqfmi/Watchy.git
+    https://github.com/elpaso/Rtc_Pcf8563.git
+    https://github.com/tzapu/WiFiManager.git
+    https://github.com/vsdyachkov/ESP32-ANCS-Notifications
 
 board_build.partitions = huge_app.csv
 upload_speed = 921600
-build_src_flags = -Wall -Wextra
 lib_ldf_mode = deep+
 build_flags =
     -DARDUINO_ARCH_ESP32
+    -DWATCHY_SIMULATE_WATCHY_BOARD
+    -DCONFIG_ESP32_PHY_MAX_TX_POWER=CONFIG_ESP_PHY_MAX_TX_POWER
     -Iinclude
